Undo fix heading alignment commit (uneeded and didn't work)

--- a/style.css
+++ b/style.css
@@ -31,8 +31,6 @@ thead {
 
 tbody { font-size:13pt; }
 
-th { text-align: center; }
-
 td { text-wrap-style: balance; }
 
 div#data-table_info.dt-info, label, input#dt-search-0.dt-input {
